@@ -3,11 +3,10 @@ package seedu.pennywise.model.entry;
 import static java.util.Objects.requireNonNull;
 import static seedu.pennywise.commons.util.AppUtil.checkArgument;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
- * Represents a Tag in the penny wise application.
+ * Represents a Tag in the PennyWise application.
  * Guarantees: immutable; name is valid as declared in {@link #isValidTagName(EntryType, String)}
  */
 public class Tag {
@@ -18,14 +17,14 @@ public class Tag {
     public static final String EXPENDITURE_CONSTRAINTS = "Expenditure tag must only be one of the following: \n"
             + "Food, Groceries, Entertainment, Transport, Education, Housing, Others";
     public static final String VALIDATION_REGEX = "\\p{Alnum}+";
-    public static final List<String> INCOME_TAGS = Arrays.asList(
+    public static final List<String> INCOME_TAGS = List.of(
             "Salary",
             "Allowance",
             "Profit",
             "Investment",
             "Gifts",
             "Others");
-    public static final List<String> EXPENDITURE_TAGS = Arrays.asList(
+    public static final List<String> EXPENDITURE_TAGS = List.of(
             "Food",
             "Groceries",
             "Entertainment",
@@ -48,6 +47,8 @@ public class Tag {
 
     /**
      * Returns true if a given string is a valid tag name.
+     *
+     * @return True if a given string is a valid tag name.
      */
     public static boolean isValidTagName(EntryType type, String test) {
         if (!test.matches(VALIDATION_REGEX)) {
@@ -65,14 +66,16 @@ public class Tag {
             }
             break;
         default:
-            break;
+            return false;
         }
         return true;
 
     }
 
     /**
-     * Gets tagName
+     * Returns the name of the tag.
+     *
+     * @return Name of the tag.
      */
     public String getTagName() {
         return tagName;
@@ -83,7 +86,7 @@ public class Tag {
     public boolean equals(Object other) {
         return other == this // short circuit if same object
             || (other instanceof Tag // instanceof handles nulls
-            && tagName.equals(((Tag) other).tagName)); // state check
+            && getTagName().equals(((Tag) other).getTagName())); // state check
     }
 
     @Override
@@ -92,10 +95,12 @@ public class Tag {
     }
 
     /**
-     * Format state as text for viewing.
+     * Formats the tag as text for viewing.
+     *
+     * @return Formatted tag.
      */
     public String toString() {
-        return tagName;
+        return getTagName();
     }
 
 }
